# BasiXenuM

./: .gitignore  README.md  pyproject.toml
basixenum/: .reminder.swn  .reminder.swo  cli.py  report.py  runner.py  vulns.py
basixenum/tasks/: base.py  smb.py  web.py
